AUTOHOME分库分表cdc增量同步需求

--- a/src/CdcTools.CdcToKafka.Streaming/appsettings.json
+++ b/src/CdcTools.CdcToKafka.Streaming/appsettings.json
@@ -2,14 +2,16 @@
   //"ExecutionId": "fc159b6f-1c10-4bcf-b744-b9c8c2fc5e3a",
   "IntervalMs": 1000,
   "TableTopicPrefix": "cdc-table-",
-  "Tables": "Person,PersonAddress",
-  "Mode": "full-load", // cdc-nontran, full-load
+  "Tables": "",
+  "Mode": "cdc-nontran", // cdc-nontran, full-load
   "SerializationMode": "Json", // Avro, Json
   "SendWithKey": false,
   "PrintPercentProgressMod": 5,
   "BatchSize": 1000,
-  "DatabaseConnection": "Server=(local);Database=CdcToRedshift;Trusted_connection=true;",
-  "StateManagmentConnection": "Server=(local);Database=CdcToRedshift;Trusted_connection=true;",
+  "DatabaseConnection": "Data Source=10.168.100.33;Initial catalog=Reply2900;user id=sa;password=autohome;",
+  "StateManagmentConnection": "Data Source=10.168.100.33;Initial catalog=CdcTools;user id=sa;password=autohome;",
   "KafkaBootstrapServers": "192.168.1.33:9092",
-  "KafkaSchemaRegistryUrl": "http://192.168.1.33:8081"
+  "KafkaSchemaRegistryUrl": "http://192.168.1.33:8081",
+  "DatabaseWhiteRegex": "Reply2900",
+  "TableWhiteRegex": "ClubReply2810"
 }
